--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="http://leaverou.github.com/prefixfree/prefixfree.min.js"></script>
   </body>
 </html>
